[tool.poetry]
name = "city-map-server"
version = "0.1.0"
description = ""
authors = ["Pablo Chinea <khertz@gmail.com>"]
readme = "README.md"
packages = [{include = "city_map_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
python-decouple = "^3.8"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.tests.dependencies]
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
